@@ -35,6 +35,10 @@ export(cluster_modify_pairs)
 export(cluster_pair)
 export(cluster_pair_blocking)
 export(cluster_pair_minsim)
+export(cmp_identical)
+export(cmp_jaccard)
+export(cmp_jarowinkler)
+export(cmp_lcs)
 export(compare_pairs)
 export(compare_vars)
 export(deduplicate_equivalence)
