@@ -62,7 +62,7 @@
 #' @export
 cluster_pair_minsim<- function(cluster, x, y, on, minsim = 0.0, 
     on_blocking = character(0), comparators = list(default_comparator), 
-    default_comparator = identical(), keep_simsum = TRUE, 
+    default_comparator = cmp_identical(), keep_simsum = TRUE, 
     deduplication = FALSE, name = "default") {
   x <- as.data.table(x)
   if (deduplication && !missing(y)) warning("y provided will be ignored.")
