@@ -12,7 +12,7 @@ cluster_pair_minsim(
   minsim = 0,
   on_blocking = character(0),
   comparators = list(default_comparator),
-  default_comparator = identical(),
+  default_comparator = cmp_identical(),
   keep_simsum = TRUE,
   deduplication = FALSE,
   name = "default"
