@@ -1,17 +1,29 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/comparators.R
-\name{identical}
+\name{cmp_identical}
+\alias{cmp_identical}
 \alias{identical}
+\alias{cmp_jarowinkler}
 \alias{jaro_winkler}
+\alias{cmp_lcs}
 \alias{lcs}
+\alias{cmp_jaccard}
 \alias{jaccard}
 \title{Comparison functions}
 \usage{
+cmp_identical()
+
 identical()
 
-jaro_winkler(threshold = 0.95)
+cmp_jarowinkler(threshold = 0.95)
+
+jaro_winkler(threshold = 0.8)
+
+cmp_lcs(threshold = 0.8)
 
 lcs(threshold = 0.8)
+
+cmp_jaccard(threshold = 0.8)
 
 jaccard(threshold = 0.8)
 }
@@ -48,15 +60,23 @@ The \code{jaro_winkler}, \code{lcs} and \code{jaccard} functions use the corresp
 methods from \code{\link{stringdist}} except that they are transformed from
 a distance to a similarity score.
 }
+\section{Warning}{
+
+The functions \code{identical}, \code{jaro_winkler}, \code{lcs} and
+\code{jaccard} are deprecated and will be removed in future versions of the
+package. Instead use the functions \code{cmp_identical},
+\code{cmp_jarowinkler}, \code{cmp_lcs} and \code{cmp_jaccard}.
+}
+
 \examples{
-cmp <- identical()
+cmp <- cmp_identical()
 x <- cmp(c("john", "mary", "susan", "jack"), 
          c("johan", "mary", "susanna", NA))
 # Applying the comparison function to the result of the comparison results 
 # in a logical result, with NA's and values of FALSE set to FALSE
 cmp(x)
 
-cmp <- jaro_winkler(0.95)
+cmp <- cmp_jarowinkler(0.95)
 x <- cmp(c("john", "mary", "susan", "jack"), 
          c("johan", "mary", "susanna", NA))
 # Applying the comparison function to the result of the comparison results 
