@@ -11,7 +11,7 @@ pair_minsim(
   minsim = 0,
   on_blocking = character(0),
   comparators = list(default_comparator),
-  default_comparator = identical(),
+  default_comparator = cmp_identical(),
   keep_simsum = TRUE,
   deduplication = FALSE,
   add_xy = TRUE
